# ollama-mcp-zed

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: release.yml
configuration/: default_settings.jsonc  installation.md  settings_schema.json
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs
