[package]
name = "ollama-search-mcp-zed"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zed extension that runs the Ollama web_search / web_fetch MCP server"
repository = "https://github.com/ykodywin/ollama-mcp-zed"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"