[package]
name = "ollama-search-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MCP stdio server exposing Ollama web_search and web_fetch"
repository = "https://github.com/ykodywin/ollama-mcp-zed"

[[bin]]
name = "ollama-search-mcp"
path = "src/main.rs"

[dependencies]
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"